<resources>
    <string name="app_name">PhoneBook</string>
    <string name="hieu_gmail_com">Hieu@gmail.com</string>
    <string name="id">ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="_0969123456">0969123456</string>
    <string name="contact_name">Contact Name</string>
    <string name="make_call">Make Call</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send Email</string>
    <string name="a">A</string>
    <string name="contact_name_is_here">Contact name is here.</string>
</resources>